# Email-Sender-Microservice

./: .env  Dockerfile  docker-compose-github.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: github-actions-deploy-linter.yml
src/broker/: service.py
src/password/: service.py
src/password/templates/: change_password.html
src/password/templates/css/: style.css
src/settings/: settings.py
src/smtp/: service.py
src/smtp/templates/: user_register.html
